--- a/bower.json
+++ b/bower.json
@@ -13,16 +13,16 @@
     "output"
   ],
   "dependencies": {
-    "purescript-prelude": "^1.0.1",
-    "purescript-js-timers": "^1.0.0",
-    "purescript-observable": "^2.1.0",
-    "purescript-eff": "^1.0.0",
-    "purescript-st": "^1.0.0",
-    "purescript-maybe": "^1.0.0"
+    "purescript-prelude": "^2.1.0",
+    "purescript-js-timers": "^2.0.0",
+    "purescript-observable": "^3.0.0",
+    "purescript-eff": "^2.0.0",
+    "purescript-st": "^2.0.0",
+    "purescript-maybe": "^2.0.0"
   },
   "devDependencies": {
-    "purescript-test-unit": "~9.0.0",
-    "purescript-refs": "~1.0.0",
-    "purescript-catenable-lists": "purescript/purescript-catenable-lists#master"
+    "purescript-test-unit": "~10.0.0",
+    "purescript-refs": "~2.0.0",
+    "purescript-catenable-lists": "^3.0.0"
   }
 }
